<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TODOList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_login">Login Here</string>
    <string name="title_register">Register Here</string>
    
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_register">Register</string>
    <string name="button_add">Add</string>
    <string name="label_title">Title</string>
    <string name="label_desc">Description</string>

</resources>
